small change like underline

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -827,8 +827,8 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
               scientific projects, in silico modeling, the importance of research in projects, guidelines for human
               practices, and the significance of interconnectivity among projects worldwide. To assess the student's
               understanding and application of these concepts, we designed a series of tasks, some of which are listed
-              below:<br><br>
-              Task 0: Basics of Biotechnology<br>
+              below:<br><br><u>
+              Task 0: Basics of Biotechnology</u><br>
             <ul>
               <li>This task served as a refresher, briefly covering fundamental biotechnology concepts and requiring
                 citations or resource links for answers.</li>
@@ -1323,10 +1323,6 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             data-bs-target="#collapseTwentyEight" aria-expanded="false" aria-controls="collapseTwentyEight">
             <b>"Unlocking Clarity: A Comprehensive Guide to Water Pollution, Micropollutants, and Sustainable
               Solutions"</b><br><br>
-              <div class="ratio ratio-16x9">
-              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/unlocking-clarity-handbook.pdf"
-                allowfullscreen></iframe>
-            </div>
           </button>
         </h2>
         <div id="collapseTwentyEight" class="accordion-collapse collapse" aria-labelledby="headingTwentyEight">
@@ -1336,6 +1332,10 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
               interested on Water Pollution, Understanding Micropollutants, Water Treatment Methods, Prevention and
               Source Control and Wastewater Management.
             </p>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/unlocking-clarity-handbook.pdf"
+                allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
