--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -79,7 +79,7 @@
     {% block heading %}Human Practices{% endblock %}
 
     {% block page_content %}
-    <p class="mt-5 MAIN-STUFF" id="section1"> Introducing Our Human Practices Approach: The IMPACT Framework </p>
+    <p class="mt-5 MAIN-STUFF" id="#section1"> Introducing Our Human Practices Approach: The IMPACT Framework </p>
 
     <p class="mt-5 sub-stuff">In our iGEM journey, we have adopted the <b>"IMPACT Framework"</b> as the guiding
       philosophy for our Human Practices endeavors. This holistic framework, rooted in the principles of Ideation,
@@ -148,7 +148,7 @@
 
     </p>
 
-    <p class="mt-5 MAIN-STUFF" id="section2">
+    <p class="mt-5 MAIN-STUFF" id="#section2">
       Sustainable Development Goals
     </p>
 
@@ -158,6 +158,21 @@
       that development must balance social, economic, and environmental sustainability. Throughout our project, we have
       kept these SDGs in mind and worked towards fulfilling them and understanding the interconnectivity of these
       goals.<br><br></p>
+
+      <div class="image-container" style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
+                <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-10.png" alt="Image 1" style="width:25%; height:auto">
+                <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-3.png" alt="Image 2" style="width:25%; height:auto">
+                <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-4.png" alt="Image 3" style="width:25%; height:auto">
+                <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-6.png" alt="Image 4" style="width:25%; height:auto">
+                <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-9.png" alt="Image 5" style="width:25%; height:auto">
+              </div>
+            <div class="image-container" style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
+              <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-11.png" alt="Image 6" style="width:25%; height:auto">
+              <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-12.png" alt="Image 7" style="width:25%; height:auto">
+              <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-14.png" alt="Image 8" style="width:25%; height:auto">
+              <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-15.png" alt="Image 9" style="width:25%; height:auto">
+              <img src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/sdg-17.png" alt="Image 10" style="width:25%; height:auto">
+            </div>
 
     <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li>Our project considerably advances several Sustainable Development Goals (SDGs). We advance <b>Good Health and
@@ -187,7 +202,7 @@
         reach to the community throughout our project <b>(Goal 17-Partnership For Goals)</b>.</li>
     </ul>
 
-    <p class="mt-5 MAIN-STUFF" id="section3">
+    <p class="mt-5 MAIN-STUFF" id="#section3">
       Stakeholder Approach
     </p>
 
@@ -202,7 +217,7 @@
     <p class="mt-5 MAIN-STUFF">Stakeholder-Specific SWOT Analysis</p>
 
 
-    <p class="mt-5 MAIN-STUFF" id="section4">Integrated Human Procesess</p>
+    <p class="mt-5 MAIN-STUFF" id="#section4">Integrated Human Practices</p>
     <p class="sub-stuff">Instead of creating a general SWOT analysis for our project we conducted a SWOT analysis for
       each of our five stakeholder categories. A generalized stakeholder analysis would have given us a breakdown of who
       our stakeholders are. However, since we had already identified our stakeholders, we used this categorized SWOT
@@ -210,6 +225,38 @@
       accordingly. We used the analysis to weigh the inputs given by the stakeholders and focussed on the weaknesses and
       threats to analyze <b>the necessity of integrating their opinions into our project</b> and how to explore further
       opinions within the same stakeholder category.<br><br></p>
+
+    <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/1.jpg"
+                    class="img-fluid mt-4" style="scale:0.8">
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/2.jpg"
+                    class="img-fluid mt-4" style="scale:0.8">
+                </div>
+  </div>
+
+  <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/3.jpg"
+                    class="img-fluid mt-4" style="scale:0.8">
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/4.jpg"
+                    class="img-fluid mt-4" style="scale:0.8">
+                </div>
+  </div>
+
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/education/5.jpg"
+                    class="img-fluid mt-4" style="scale:0.8">
+
+
 
     <img class="img-fluid rounded mx-auto d-block" style="scale:0.4"
       src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/distribution-of-stakeholders-around-the-world.png">
@@ -300,7 +347,7 @@
             <h1>Dr. Shailendra Kumar Tiwari</h1>
           </div>
           <div class="timeline-body">
-            <p>Associate Professor at the Department of Electronic and Communication Engineering, MIT Manipa</p>
+            <p>Associate Professor at the Department of Electronic and Communication Engineering, MIT Manipal</p>
           </div>
           <div class="timeline-footer">
             <p class="text-right">12/05/2023</p>
@@ -885,15 +932,11 @@
       <div class="modal-dialog modal-fullscreen ihp-lab-modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title reveal-on-scroll" id="ihp-modal-5Label">Dr. Bobby Paul</h3>
+            <h3 class="modal-title reveal-on-scroll" id="ihp-modal-5Label">Dr. Shailendra Kumar Tiwari</h3>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p class="mt-3 sub-stuff"><i><i>Discussion:</i><br>
-                Designation:Associate Professor at the Department of Electronic and Communication Engineering, MIT
-                Manipal<br><br>
-
-                <b>12/05/2023</b><br><br>
+            <p class="mt-3 sub-stuff"><i>Discussion:</i><br>
 
                 <i>Discussion:</i><br>
                 We reached out to Dr. Tiwari, intending to discuss various techniques for detecting triclocarban (TCC).
@@ -1881,7 +1924,7 @@
       </div>
     </div>
 
-    <p class="mt-5 MAIN-STUFF" id="section5">Surveys</p>
+    <p class="mt-5 MAIN-STUFF" id="#section5">Surveys</p>
 
     <p class="mt-5 sub-stuff"><b>1. Analyzing and understanding scientific awareness without the bias of age and
         profession: </b><br></p>
@@ -1929,7 +1972,7 @@
         allowfullscreen></iframe>
     </div>
 
-    <p class="mt-5 MAIN-STUFF" id="section6">How our discussions lead to the Final Implementation</p>
+    <p class="mt-5 MAIN-STUFF" id="#section6">How our discussions lead to the Final Implementation</p>
 
     <p class="mt-5 sub-stuff"><b>Proposed Implementation</b></p>
 
@@ -1988,7 +2031,7 @@
       To know further details about our implementation, <a
         href="https://2023.igem.wiki/mit-mahe/project-implementation">click here</a>.
     </p>
-    <p class="mt-5 MAIN-STUFF" id="section7">References:</p>
+    <p class="mt-5 MAIN-STUFF" id="#section7">References:</p>
     Samaga, P. (2021, January 29). Toxic cocktail of chemicals discharged into Indrani River making life miserable for
     locals. The New Indian Express. <a
       href="https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html">https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html</a>
