Update contribution.html embeded a pdf added the airtable as an embed

--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -60,7 +60,8 @@ Further, we believe that this will be a good starting point for other iGEM teams
 
 
 <p class="mt-5 MAIN-STUFF" id="section2"> Bioremediation Airtable </p>
-<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from.<br><br>Click here to access the <a href="https://airtable.com/app3BRSug6bFUCrVi/tblC97SBfyP2r1Wyy/viwhVBKkV4u8e0zy7?blocks=hide">Bioremediation Airtable</a> </p>
+<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from.<br><br>Click here to access the Bioremediation Airtable below </p>
+<iframe class="airtable-embed" src="https://airtable.com/embed/app3BRSug6bFUCrVi/shrOV40w0Ke08gRZr?backgroundColor=blue" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 <br>
 <p class="mt-5 MAIN-STUFF" id="section3"> Bioreactor Handbook—A Beginner’s Guide</p>
 <p class="mt-5 sub-stuff"> A major part of our project involves designing a bioreactor as a part of our implementation. Our team has designed a packed bed bioreactor to effectively degrade TCC into non-toxic products using our modified bacteria. 
@@ -80,9 +81,16 @@ Designing a bioreactor can be quite daunting, considering the huge number of fac
           <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/wet-lab-handbook.pdf" allowfullscreen></iframe>
 </div>
 
+<p class="mt-5 MAIN-STUFF" id="section5">Structure prediction hanbook</p>
 
+<p class="mt-5 sub-stuff"> The structure prediction handbook is  acomprehensive guide for dry lab based activities and offers a breakdown into the techniques and tools to predict the three-demisional structures of biomolecules.
+</p>
 
-<p class="mt-5 MAIN-STUFF" id="section5"><a href="https://2023.igem.wiki/mit-mahe/project-parts">Part: BBa_K4641000</a></p>
+<div class="ratio ratio-16x9 mt-5">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/structure-prediction-handbook.pdf" allowfullscreen></iframe>
+</div>
+
+<p class="mt-5 MAIN-STUFF" id="section6"><a href="https://2023.igem.wiki/mit-mahe/project-parts">Part: BBa_K4641000</a></p>
 
 <p class="mt-5 sub-stuff">Aniline compounds are among the hardest compounds to biodegrade due to the high stability of the carbon-nitrogen bond. However, they are a component in many micropollutants in wastewater. Triclocarban(3,4,4′-Trichlorocarbanilide)(TCC) is one such pollutant. One of the major objectives of our project was to biodegrade TCC to non toxic byproducts. TccA gene, from the <i>Ochrobactrum sp. TCC-2</i>, codes for a novel amidase enzyme <b>(EC 3.5.1.4)</b>, responsible for the hydrolysis of the two amide bonds of TCC and its dehalogenated analogs 4,4'-dichlorocarbanilide (DCC) and carbanilide (NCC) to more biodegradable chloroaniline or aniline products. TccA also has hydrolytic activity to a broad spectrum of amide bonds from herbicides, insecticides and chemical intermediates. The broad substrate spectrum of TccA suggested potential use for bioremediation applications. 
 In our project, TccA amidase is used as an agent to biodegrade the TCC present in the sludge of the wastewater treatment plant.</p>
