--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -430,7 +430,10 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
 </p>
 </p>  
 </p>
-
+<div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/model-dl/shubha.jpeg"
+                allowfullscreen></iframe>
+            </div>
 <p class="mt-5 MAIN-STUFF" id="section11">Bioreactor Modeling<br></p>
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
    <br>
