--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -113,12 +113,13 @@
                     <p class="sub-stuff" >Project CarbanEl logo—Sent to the iGEM NTHU team as the character for the map</i></p>
                     <p class="mt-3 MAIN-STUFF" id="section7">7. OUC-China, Ocean University of China, China (August 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> It is always important to be more inclusive towards the society and contribute towards this cause- the collaboration opportunity instituted by OUC China gave us the chance to help incorporate the spark of our project within the hearts of autistic children by compiling coloring sheets related to the projects of different teams.</p>
-                    <div class="ratio ratio-16x9 mt-5">
-                      <iframe src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/ouc-synbio-rainbow-compressed.pdf" allowfullscreen></iframe>
-                    </div>
+                    <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/ouc-synbio-rainbow-compressed.pdf"
+                allowfullscreen></iframe>
+            </div>    
                     <p class="mt-3 MAIN-STUFF" id="section8">8. iGEM IIT-Delhi, Indian Institute of Technology, Delhi, India<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The collaboration with iGEM IIT-Delhi was really special to us. Getting a chance to collaborate with a team working on a similar project and learning more about it was such an amazing experience. Together, we hosted a 3-day “Bioremediation Conclave” and a “BioArt Competition” open to the community and iGEM teams from all over the globe. The efforts that went behind the planning and organization of these events, frequent meetings and documentation by both the teams and finally, the day of the events were commendable!</p>
-                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <img style="scale:0.23;" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-4.png" class="img-responsive rounded mx-auto d-block mt-4">
                     <p class="sub-stuff"">Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave</i></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-2"> <i>Bioremediation Conclave</i> </p>
