--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -573,7 +573,7 @@ This is the amount of time required for the bacteria <i> Acinetobacter baylyi </
 
 <p class="mt-5 MAIN-STUFF" id="section14">Adsorption Kinetics <br></p>
 <div class="mt-5">
-<iframe title="MIT-MAHE Adsoprtion Video (2023) [English]" width="560" height="315" src="https://video.igem.org/w/ohcVgVGvXFMa9fEBoG8MjN" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" style="display:block;"></iframe> 
+<iframe title="MIT-MAHE: Adsorption video (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/b46c4bbf-a7d8-4260-a472-e61ca3e1d4ae" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe> 
 </div>
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
   <u><b> DESIGN EQUATION FOR THE ADSORPTION: </b></u><br>
@@ -654,7 +654,7 @@ Value of n = 96, where n is the number of cycles that can treat 10 ppm of TCC wi
 For 96 cycles, our packed bed can treat 96x1.2 L of sludge = 115.2 L. 
 <br>
 Each cycle is run for 2 days, so 96x2 = 192 days of run time. Hence, 115.2L of sludge can be treated in 192 days, after which our packing material needs to be replaced.
-<br><iframe title="MIT-MAHE Amount of biochar needed (2023) [English]" width="560" height="315" src="https://video.igem.org/w/uw8BwVThVdeAfYq3kgZm4a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" style="display:block;"></iframe> 
+<br><iframe title="MIT-MAHE: Amount of biochar needed (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/e6f4e314-dfc4-44bd-9e83-74dc81d035bf" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe> 
 <br>
 <u><b>Raschig ring calculation: </b></u>
 <br>
