Update contribution.html spelling

--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -81,7 +81,7 @@ Designing a bioreactor can be quite daunting, considering the huge number of fac
           <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/wet-lab-handbook.pdf" allowfullscreen></iframe>
 </div>
 
-<p class="mt-5 MAIN-STUFF" id="section5">Structure prediction hanbook</p>
+<p class="mt-5 MAIN-STUFF" id="section5">Structure prediction handbook</p>
 
 <p class="mt-5 sub-stuff"> The structure prediction handbook is  acomprehensive guide for dry lab based activities and offers a breakdown into the techniques and tools to predict the three-demisional structures of biomolecules.
 </p>
