--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -60,7 +60,7 @@ Further, we believe that this will be a good starting point for other iGEM teams
 
 
 <p class="mt-5 MAIN-STUFF" id="section2"> Bioremediation Airtable </p>
-<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from.<br><br>Click here to access the Bioremediation Airtable below </p>
+<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from.<br><br>Access the Bioremediation Airtable below </p>
 <iframe class="airtable-embed" src="https://airtable.com/embed/app3BRSug6bFUCrVi/shrOV40w0Ke08gRZr?backgroundColor=blue" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 <br>
 <p class="mt-5 MAIN-STUFF" id="section3"> Bioreactor Handbook—A Beginner’s Guide</p>
