FIx sidebar overlap

--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -642,4 +642,10 @@
     </p>
   </div>
 </div>
+
+<script>
+  const sidebar = document.querySelector('.sidebar');
+  sidebar.style.display = 'none';
+</script>
+
 {% endblock %}
