--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -185,4 +185,10 @@
             </div>
           </div>
           </div>
+
+          <script>
+            const sidebar = document.querySelector('.sidebar');
+            sidebar.style.display = 'none';
+          </script>
+          
 {% endblock %}
