--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -1260,4 +1260,9 @@
   </div>
 </div>
 
+<script>
+  const sidebar = document.querySelector('.sidebar');
+  sidebar.style.display = 'none';
+</script>
+
 {% endblock %}
