--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -58,7 +58,7 @@
             <img src="https://static.igem.wiki/teams/4641/wiki/meet-the-team/anandita.jpeg" alt="Image 2">
             <div class="text">
               <h3>Anandita Rawat</h3><br>
-              Human Practices and Management
+              Team Manager,Human Practices and Management Member
               <p>Anandita is a motivated and diligent member of our team who also infuses a dose of lightheartedness
                 and
                 humor into work everyday. At any time of the day, she's blasting her favourite rock hits — you'll
@@ -97,7 +97,7 @@
             <img src="https://static.igem.wiki/teams/4641/wiki/meet-the-team/dharmika-challa.jpeg" alt="Image 5">
             <div class="text">
               <h3>Dharmika Challa </h3><br>
-              H&S
+              Head of H&S
               <p>Meet Dharmika, our hardware and software head. She's always eager to work alongside her colleagues,
                 ensuring that no task is too daunting when faced together. Her innate ability to keep everyone in
                 the
@@ -332,7 +332,7 @@
           </div>
 
           <div class="image">
-            <img src="https://static.igem.wiki/teams/4641/wiki/homepage/homepage-1.png" alt="Image 1">
+            <img src="https://static.igem.wiki/teams/4641/wiki/meet-the-team/shreyas-pakhie.jpg" alt="Image 1">
             <div class="text">
               <h3>Shreyas Samir Parkhie</h3><br>
               Mentor
