--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -953,7 +953,6 @@
       <div class="modal-body">
         <p class="mt-3 sub-stuff"><i>Discussion:</i><br>
 
-          <i>Discussion:</i><br>
           We reached out to Dr. Tiwari, intending to discuss various techniques for detecting triclocarban (TCC).
           During our conversation, he suggested implementing <b>microcontrollers and paper microfluidics as
             potential avenues.</b><br>
@@ -985,7 +984,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="mt-3 sub-stuff"><i><i>Discussion:</i><br>
+        <p class="mt-3 sub-stuff"><i>Discussion:</i><br>
             Our discussion with Ms. Shreya was initiated with a focus on elevating the binding energy of our enzyme
             and understanding its direct relationship with degradation efficiency. The conversation then shifted
             towards our goal of enhancing the stability and efficiency of our modified enzyme. Shreya discussed
