Testing image size

--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -97,7 +97,7 @@
   synthetic biology and real-world challenges.</p>
 
 <figure>
-  <img class="img-fluid rounded mx-auto d-block" style="scale:0.4"
+  <img class="img-fluid rounded mx-auto d-block" style="width: 40%; height: auto;"
     src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/the-impact-framework.png">
   <figcaption style="text-align:center"> The “IMPACT” Framework </figcaption>
 </figure>
