--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -110,9 +110,9 @@
   Udupi district, we embarked on a mission to discover a local issue that our team could tackle with determination
   and dedication. We found out that industrial effluents were discharged near Manipal at the Udyavara River and
   Indrani River, making the water murky and discolored and causing the death of fish in the rivers and its
-  tributaries, endangering the people's livelihoods [1]. The polluted rivers contaminated the groundwaters, seeped
+  tributaries, endangering the people's livelihoods. The polluted rivers contaminated the groundwaters, seeped
   into the wells, and contaminated drinking water, inducing adverse health effects, such as fevers and skin rashes,
-  in the local population (reference). While attempting to identify the causative agents for the damage caused, we
+  in the local population [1]. While attempting to identify the causative agents for the damage caused, we
   identified many pressing concerns—particularly the accumulation of triclocarban (TCC) in local wastewater
   treatment plants, threatening aquatic life, our coastal fisheries, and our agricultural framework.<br><br>
 
